<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="link"><a href = "https://www.udacity.com/">Your Future Awaits!</a></string>
    <string name="address">2465 Latham St</string>
    <string name="city_state_zip">Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="quote">In the middle of difficulty lies opportunity.</string>
    <string name="speaker">- Albert Einstein</string>
    <string name="website"><a href ="https://www.udacity.com/">www.udacity.com</a></string>
    <string name="name">Udacity</string>
</resources>
